Remove Edges when Blob is removed, Align Text function, fix Edge & Text positioning for blob.setPosition, blob.toggleHide, changeSize functions,

--- a/pub/styles.css
+++ b/pub/styles.css
@@ -4,4 +4,5 @@ svg {
 }
 p {
     margin: 0;
+    padding: 3px;
 }
